--- a/.github/workflows/my-action.yml
+++ b/.github/workflows/my-action.yml
@@ -41,5 +41,5 @@ jobs:
         run: npm install jshint --global
       - name: Run Linter
         run: |
-          find ./server/database -name "*.js" -exec jshint -esversion=8 {} +
+          find ./server/database -name "*.js" -exec jshint {} +
           echo "Linted all the js files successfully"
